tests/compile-fail/intrinsics/simd-reduce-invalid-bool.stderr
error: Undefined Behavior: each element of a SIMD mask must be all-0-bits or all-1-bits
  --> $DIR/simd-reduce-invalid-bool.rs:13:5
   |
LL |     simd_reduce_any(x); //~ERROR must be all-0-bits or all-1-bits
   |     ^^^^^^^^^^^^^^^^^^ each element of a SIMD mask must be all-0-bits or all-1-bits
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/simd-reduce-invalid-bool.rs:13:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

